# chatuza_local_db

./: .env  Cargo.toml  README.md  chatuza_client.sqlite3
migrations/2024-01-10-142358_init_wallet_msgs_chat_rooms/: up.sql
migrations/2024-01-10-163756_changing_chatrooms_to_chat_rooms/: down.sql  up.sql
migrations/2024-01-10-164422_changing_wallets_to_wallets/: down.sql  up.sql
migrations/2024-01-14-145024_reinit/: down.sql  up.sql
src/: db_models.rs  lib.rs  schema.rs  server_models.rs
