[package]
name = "chatuza_local_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
src = ["lib.rs"]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "r2d2"] }
dotenvy = "0.15.7"
reqwest = "0.11.23"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
